log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 06:53:39 PM UTC 2026: 
 graph.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:49: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     MapPair *pair = map_search(g->adjacencyMap, label1);
      |                                                 ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:55:20: error: passing argument 1 of ‘strcpy’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   55 |         if (strcpy(label2, arista->target)) return arista->weight;
      |                    ^~~~~~
In file included from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/features.h:511,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/libc-header-start.h:33,
                 from /nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:28,
                 from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/bits/string_fortified.h:77:16: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | __NTH (strcpy (__fortify_clang_overload_arg (char *, __restrict, __dest),
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
00c29b5
Fri May 15 06:59:14 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:49: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     MapPair *pair = map_search(g->adjacencyMap, label1);
      |                                                 ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
e57857a
Fri May 15 07:00:39 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
6a4cbf9
Fri May 15 07:01:44 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f05326d
Fri May 15 07:03:20 PM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
========================================
88797a6
Fri May 15 07:06:21 PM UTC 2026: 
 tests:  1|5
========================================
3dcff28
Fri May 15 10:03:27 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:48: error: invalid application of ‘sizeof’ to incomplete type ‘Map’
   32 |     grafo->adjacencyMap = (Map *)malloc(sizeof(Map));
      |                                                ^~~
48e1732
Fri May 15 10:07:07 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:39: error: expected expression before ‘int’
   32 |     grafo->adjacencyMap = *map_create(int (*is_equal)(void *key1, void *key2));
      |                                       ^~~
48c3a56
Fri May 15 10:08:04 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:28: error: too few arguments to function ‘map_create’
   32 |     grafo->adjacencyMap = *map_create();
      |                            ^~~~~~~~~~
In file included from graph.c:8:
map.h:14:6: note: declared here
   14 | Map *map_create(int (*is_equal)(void *key1, void *key2)); // unsorted map
      |      ^~~~~~~~~~
4642077
Fri May 15 10:08:18 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:27: error: too few arguments to function ‘map_create’
   32 |     grafo->adjacencyMap = map_create();
      |                           ^~~~~~~~~~
In file included from graph.c:8:
map.h:14:6: note: declared here
   14 | Map *map_create(int (*is_equal)(void *key1, void *key2)); // unsorted map
      |      ^~~~~~~~~~
a15a01f
Fri May 15 10:08:49 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
c5abda6
Fri May 15 10:09:42 PM UTC 2026: 
 graph.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5e78942
Fri May 15 10:10:33 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4c4307a
Fri May 15 10:30:36 PM UTC 2026: 
 graph.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:68: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   40 |     if (map_search(g->adjacencyMap, (void *)label) != NULL) return NULL;
      |                                                                    ^~~~
graph.c:37:6: note: declared here
   37 | void addNode(Graph* g, const char* label)
      |      ^~~~~~~
graph.c:43:16: error: expected expression before ‘Map’
   43 |     map_insert(Map *g->adjacencyMap, label, lista)
      |                ^~~
graph.c:43:5: error: too few arguments to function ‘map_insert’
   43 |     map_insert(Map *g->adjacencyMap, label, lista)
      |     ^~~~~~~~~~
In file included from graph.c:8:
map.h:18:6: note: declared here
   18 | void map_insert(Map *map, void *key, void *value);
      |      ^~~~~~~~~~
graph.c:43:51: error: expected ‘;’ before ‘}’ token
   43 |     map_insert(Map *g->adjacencyMap, label, lista)
      |                                                   ^
      |                                                   ;
   44 | }
      | ~                                                  
graph.c:42:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   42 |     List *lista = list_create();
      |           ^~~~~
cc1: all warnings being treated as errors
89eabe6
Fri May 15 10:31:25 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:68: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   40 |     if (map_search(g->adjacencyMap, (void *)label) != NULL) return NULL;
      |                                                                    ^~~~
graph.c:37:6: note: declared here
   37 | void addNode(Graph* g, const char* label)
      |      ^~~~~~~
graph.c:43:16: error: expected expression before ‘Map’
   43 |     map_insert(Map *g->adjacencyMap, (void *)label, (void *)lista);
      |                ^~~
graph.c:43:5: error: too few arguments to function ‘map_insert’
   43 |     map_insert(Map *g->adjacencyMap, (void *)label, (void *)lista);
      |     ^~~~~~~~~~
In file included from graph.c:8:
map.h:18:6: note: declared here
   18 | void map_insert(Map *map, void *key, void *value);
      |      ^~~~~~~~~~
graph.c:42:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   42 |     List *lista = list_create();
      |           ^~~~~
cc1: all warnings being treated as errors
9ecc119
Fri May 15 10:31:57 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4981438
Fri May 15 10:47:42 PM UTC 2026: 
 graph.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:50:30: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   50 |     if (pair == NULL) return -1;
      |                              ^
graph.c:46:6: note: declared here
   46 | void addEdge(Graph* g, const char* src, const char* dest, int weight)
      |      ^~~~~~~
afda4bc
